#4 Fixes for generated code