@@ -6,8 +6,6 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.testcontainers.junit.jupiter.Testcontainers;
 
-import java.util.ArrayList;
-import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -30,7 +28,7 @@ public class WorkerCheckInIT extends BaseIT {
         subscriptionOffsetDao = new SubscriptionOffsetDao(dataSource);
         eventDao = new EventDao(dataSource);
         data = TestData.seed(dataSource);
-        
+
         // Publish some events to create active partitions
         for (int i = 0; i < 10; i++) {
             // Calculate partition ID (topic_id << 16) + partition_number
@@ -43,15 +41,15 @@ public class WorkerCheckInIT extends BaseIT {
     void checkIn_singleWorker_acquiresAllLeases() {
         // Given a single worker
         Worker worker = data.worker1();
-        
+
         // When the worker checks in
         WorkerCheckInResult result = workerDao.checkIn(
-                worker.id(), 
-                worker.nodeId(), 
-                worker.consumerGroupId(), 
-                worker.weight(), 
+                worker.id(),
+                worker.nodeId(),
+                worker.consumerGroupId(),
+                worker.weight(),
                 5);
-        
+
         // Then the worker should acquire all active leases
         assertThat(result.activeWorkers()).isEqualTo(1);
         assertThat(result.activePartitions()).isGreaterThan(0);
@@ -63,14 +61,14 @@ public class WorkerCheckInIT extends BaseIT {
         assertThat(result.maxLeases()).isGreaterThanOrEqualTo(result.activePartitions());
         assertThat(result.heartbeatInterval()).isGreaterThan(0);
         assertThat(result.leaseTtl()).isEqualTo(result.heartbeatInterval() * 5);
-        
+
         // Verify added leases
         assertThat(result.addedLeases()).isNotEmpty();
         assertThat(result.addedLeases().size()).isGreaterThanOrEqualTo(result.minLeases());
-        
+
         // Verify no removed leases
         assertThat(result.removedLeases()).isEmpty();
-        
+
         // Verify leases in database
         for (SubscriptionOffset offset : result.addedLeases()) {
             assertThat(leaseDao.find(offset.id()))
@@ -80,63 +78,63 @@ public class WorkerCheckInIT extends BaseIT {
                     .isEqualTo(worker.id());
         }
     }
-    
+
     @Test
     void checkIn_multipleWorkers_distributesLeasesFairly() {
         // Given two workers with equal weight
-        Worker worker1 = data.worker1();
-        Worker worker2 = data.worker2();
-        
+        final var worker1 = data.worker1();
+        final var worker2 = data.worker2();
+
         // Make sure they're in the same consumer group
-        long worker2Id = workerDao.register(UUID.randomUUID().toString(), worker1.consumerGroupId(), worker1.weight());
-        Worker updatedWorker2 = workerDao.find(worker2Id).orElseThrow();
-        
+        final var worker2Id = workerDao.register(UUID.randomUUID().toString(), worker1.consumerGroupId(), worker1.weight());
+        final var updatedWorker2 = workerDao.find(worker2Id).orElseThrow();
+
         // When worker1 checks in first
-        WorkerCheckInResult result1 = workerDao.checkIn(
-                worker1.id(), 
-                worker1.nodeId(), 
-                worker1.consumerGroupId(), 
-                worker1.weight(), 
+        final var result1 = workerDao.checkIn(
+                worker1.id(),
+                worker1.nodeId(),
+                worker1.consumerGroupId(),
+                worker1.weight(),
                 5);
-        
+
         // Then worker1 should acquire all active leases
         assertThat(result1.activeWorkers()).isEqualTo(1);
         assertThat(result1.addedLeases()).isNotEmpty();
-        
+
         // When worker2 checks in
-        WorkerCheckInResult result2 = workerDao.checkIn(
-                updatedWorker2.id(), 
-                updatedWorker2.nodeId(), 
-                updatedWorker2.consumerGroupId(), 
-                updatedWorker2.weight(), 
+        final var result2 = workerDao.checkIn(
+                updatedWorker2.id(),
+                updatedWorker2.nodeId(),
+                updatedWorker2.consumerGroupId(),
+                updatedWorker2.weight(),
                 5);
-        
+
         // Then worker2 should see both workers
         assertThat(result2.activeWorkers()).isEqualTo(2);
-        
+
         // And worker2 should acquire approximately half of the leases
         assertThat(result2.idealShare()).isCloseTo(result2.activePartitions() / 2.0, within(0.5));
         assertThat(result2.addedLeases()).isNotEmpty();
-        
+
         // When worker1 checks in again
-        WorkerCheckInResult result1Again = workerDao.checkIn(
-                worker1.id(), 
-                worker1.nodeId(), 
-                worker1.consumerGroupId(), 
-                worker1.weight(), 
+        final var result1Again = workerDao.checkIn(
+                worker1.id(),
+                worker1.nodeId(),
+                worker1.consumerGroupId(),
+                worker1.weight(),
                 5);
-        
+
         // Then worker1 should release some leases to achieve fair distribution
         assertThat(result1Again.activeWorkers()).isEqualTo(2);
         assertThat(result1Again.removedLeases()).isNotEmpty();
-        
+
         // Verify final distribution is approximately fair
-        AtomicInteger worker1Leases = new AtomicInteger(0);
-        AtomicInteger worker2Leases = new AtomicInteger(0);
-        
-        List<SubscriptionOffset> allOffsets = subscriptionOffsetDao.findAll(
-                result1.addedLeases().get(0).subscriptionId());
-        
+        final var worker1Leases = new AtomicInteger(0);
+        final var worker2Leases = new AtomicInteger(0);
+
+        final var allOffsets = subscriptionOffsetDao.findAll(
+                result1.addedLeases().getFirst().subscriptionId());
+
         for (SubscriptionOffset offset : allOffsets) {
             leaseDao.find(offset.id()).ifPresent(lease -> {
                 if (lease.workerId() == worker1.id()) {
@@ -146,28 +144,28 @@ public class WorkerCheckInIT extends BaseIT {
                 }
             });
         }
-        
+
         // With equal weights, each worker should have approximately the same number of leases
         double ratio = (double) worker1Leases.get() / (worker1Leases.get() + worker2Leases.get());
         assertThat(ratio).isCloseTo(0.5, within(0.2));
     }
-    
+
     @Test
     void checkIn_workerExpiry_releasesLeases() throws InterruptedException {
         // Given a worker that has acquired leases
-        Worker worker = data.worker1();
-        
+        final var worker = data.worker1();
+
         // When the worker checks in
-        WorkerCheckInResult result = workerDao.checkIn(
-                worker.id(), 
-                worker.nodeId(), 
-                worker.consumerGroupId(), 
-                worker.weight(), 
+        final var result = workerDao.checkIn(
+                worker.id(),
+                worker.nodeId(),
+                worker.consumerGroupId(),
+                worker.weight(),
                 1); // Short lease TTL for testing
-        
+
         // Then the worker should acquire leases
         assertThat(result.addedLeases()).isNotEmpty();
-        
+
         // Verify leases in database
         for (SubscriptionOffset offset : result.addedLeases()) {
             assertThat(leaseDao.find(offset.id()))
@@ -176,29 +174,29 @@ public class WorkerCheckInIT extends BaseIT {
                     .extracting(Lease::workerId)
                     .isEqualTo(worker.id());
         }
-        
+
         // Wait for leases to expire
         Thread.sleep(result.leaseTtl() * 1000 + 1000);
-        
+
         // When another worker checks in
-        long worker2Id = workerDao.register(UUID.randomUUID().toString(), worker.consumerGroupId(), worker.weight());
-        Worker worker2 = workerDao.find(worker2Id).orElseThrow();
-        
-        WorkerCheckInResult result2 = workerDao.checkIn(
-                worker2.id(), 
-                worker2.nodeId(), 
-                worker2.consumerGroupId(), 
-                worker2.weight(), 
+        final var worker2Id = workerDao.register(UUID.randomUUID().toString(), worker.consumerGroupId(), worker.weight());
+        final var worker2 = workerDao.find(worker2Id).orElseThrow();
+
+        final var result2 = workerDao.checkIn(
+                worker2.id(),
+                worker2.nodeId(),
+                worker2.consumerGroupId(),
+                worker2.weight(),
                 5);
-        
+
         // Then the new worker should acquire the expired leases
         assertThat(result2.addedLeases()).isNotEmpty();
-        
+
         // And the original worker should be considered expired
         assertThat(result2.activeWorkers()).isEqualTo(1);
-        
+
         // Verify leases in database are now owned by worker2
-        for (SubscriptionOffset offset : result2.addedLeases()) {
+        for (final var offset : result2.addedLeases()) {
             assertThat(leaseDao.find(offset.id()))
                     .isPresent()
                     .get()
